Cleaned some code and added more functionalities like storing the session in the database to keep user logged in for a whole work day.
